[tool.poetry]
name = "fixed store"
version = "0.1.0"
description = "An application that unites like-minded people"
authors = ["gorbushka <glebdeshar@gmail.com>"]
license = "MDM"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
